feat: add Spring Boot validations